--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="about-details text-center">
                     
                     <h1 class="color-red font-weight-300">TEAM MEMBERS</h1>
-                    <p class="text text-white">In a world where we're all more connected than ever, there's still something missing. We want to explore the globe from our screens, connect with people from all over, and get a real taste of different cultures. But the usual social media platforms just aren't cutting it. Sites like Facebook or Instagram show snapshots, but they don’t dive deep into the heart of cultures or hidden gems in various countries. They can't give us that immersive global experience we crave. We need a fun and interactive world blog where we can zoom in on a map, discover cool blogs from different places, and feel like we're traveling without leaving our couches. It's time for a platform that lets us truly explore, connect, and share our world.</p>
+                    <p class="text text-white">KiranSandilya Aryan Kilaru NagaNitishChandra Pothukuchi Kattalyn Abhishek Sharma</p>
                     
                 </div>
             </div>
