--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="domain_analysis.html">Domain Analysis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="scenario-story">Scenario and Story Board</a>
+                            <a class="nav-link" href="sketch_analysis.html">Scenario and Story Board</a>
                         </li>
 
                         <li class="nav-item">
@@ -98,7 +98,7 @@
                             <a class="nav-link scroll" href="domain_analysis.html">Domain Analysis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link scroll" href="scenario-story">Scenario and Story Board</a>
+                            <a class="nav-link scroll" href="sketch_analysis.html">Scenario and Story Board</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link scroll" href="#protoype">Paper Prototyping/Testing</a>
