--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#protoype">Paper Prototyping/Testing</a>
+                            <a class="nav-link" href="proto_type.html">Paper Prototyping/Testing</a>
                         </li>
 
                         <li class="nav-item">
