--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="computer-prototype">Computer Prototyping/ Testing Implementation</a>
+                            <a class="nav-link" href="computer_prototype.html">Computer Prototyping/ Testing Implementation</a>
                         </li>
 
 
