Update blogs.html just F

--- a/computerprototype/blogs.html
+++ b/computerprototype/blogs.html
@@ -230,7 +230,7 @@
 <script>
     function openForumPage() {
         // Redirect to the forum page with the respective hashtag
-        window.location.href = 'Forums.html';
+        window.location.href = 'forums.html';
     }
 </script>
 
