--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="computer_prototype.html">Computer Prototyping/ Testing Implementation</a>
+                            <a class="nav-link" href="computer_prototype.html">Computer Prototyping </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="implementation.html">Implementation </a>
                         </li>
 
 
