--- a/implementation.html
+++ b/implementation.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=computerprototype/index.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="computerprototype/index.html">click here</a>.</p>
+    <p>If you are not redirected, click on the names below:</p>
+    <ul>
+        <li><a href="homepage/index.html">Implementation</a></li>
+        <li><a href="url2">Name2</a></li>
+        <li><a href="url3">Name3</a></li>
+    </ul>
 </body>
 </html>
