--- a/implementation.html
+++ b/implementation.html
@@ -8,8 +8,8 @@
     <p>If you are not redirected, click on the names below:</p>
     <ul>
         <li><a href="homepage/index.html">Implementation</a></li>
-        <li><a href="url2">Name2</a></li>
-        <li><a href="url3">Name3</a></li>
+        <li><a href="url2">Video Instruction</a></li>
+        <li><a href="url3">Manual Instruction</a></li>
     </ul>
 </body>
 </html>
